quiz improvements